--- a/resources/js/assets/css/config.css
+++ b/resources/js/assets/css/config.css
@@ -566,3 +566,21 @@ iframe {
     display: flex;
     align-items: center;
 }
+
+/* ELEMENT-UI */
+.el-select.el-select--large {
+    height: 38px;
+}
+.el-select-dropdown {
+    max-width: 900px;
+}
+
+.el-input.is-invalid .el-input__wrapper,
+.el-textarea.is-invalid .el-textarea__wrapper,
+.el-select.is-invalid .el-select__wrapper {
+    box-shadow: 0 0 0 1px #dc3545;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right calc(0.375em + 0.1875rem) center;
+    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
