Registro cliente + Mostrar inicio productos

--- a/resources/js/assets/css/config.css
+++ b/resources/js/assets/css/config.css
@@ -2,7 +2,7 @@
 :root {
     --principal: #00497e;
     --principal_hover: #134869;
-    --principal-portal: #00aeeb;
+    --principal-portal: #171717;
     --principal-portal2: #26638d;
     --principal-portal3: #0e70b7;
     --principal_transparent: #004a80bd;
